cleaner pom file
