# user-manager/target/generated-sources/openapi/src/main/java/ch/heigvd/user/api/LoginApi.java
@@ -1,0 +1,62 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (4.2.1).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package ch.heigvd.user.api;
+
+import ch.heigvd.user.api.model.JWTToken;
+import ch.heigvd.user.api.model.UserCredentials;
+import io.swagger.annotations.*;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2020-01-13T16:47:44.084+01:00[Europe/Berlin]")
+
+@Validated
+@Api(value = "login", description = "the login API")
+public interface LoginApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    @ApiOperation(value = "", nickname = "login", notes = "log with JWT token", response = JWTToken.class, tags={  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 201, message = "logged in", response = JWTToken.class),
+        @ApiResponse(code = 401, message = "Wrong user credentials") })
+    @RequestMapping(value = "/login",
+        produces = { "*/*" }, 
+        consumes = { "application/json" },
+        method = RequestMethod.POST)
+    default ResponseEntity<JWTToken> login(@ApiParam(value = "" ,required=true )  @Valid @RequestBody UserCredentials userCredentials) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("*/*"))) {
+                    String exampleString = "{ \"jwttoken\" : \"jwttoken\" }";
+                    ApiUtil.setExampleResponse(request, "*/*", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
